--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">Base</string>
+    <string name="app_name">Coworking</string>
+
+    <!-- Login -->
+    <string name="title_login">Email</string>
+    <string name="title_password">Password</string>
+    <string name="button_login">Login</string>
+    <string name="error_login_empty">Please enter your email</string>
+    <string name="error_login_invalid">Please enter a valid email</string>
+    <string name="error_password_empty">Please enter your password</string>
+
 </resources>
