--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,15 @@
     <string name="error_room_empty_name">Please enter a room name</string>
     <string name="error_room_invalid_area">Area is invalid</string>
 
+    <!-- Managers -->
+    <string name="title_managers">Managers</string>
+    <string name="button_add_manager">Add new manager</string>
+    <string name="title_manager_options">Manager actions</string>
+    <string name="option_manager_edit">Edit manager information</string>
+    <string name="option_manager_delete">Delete manager</string>
+    <string name="title_manager_delete">Delete manager</string>
+    <string name="message_manager_delete">Do you really want to delete \"%s\" from the managers list?</string>
+
     <plurals name="workplaces">
         <item quantity="zero">No workplaces</item>
         <item quantity="one">%d workplace</item>
