Add create transaction price displaying

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Coworking</string>
 
     <string name="currency">"\$"</string>
+    <string name="no_price">"-.--"</string>
 
     <!-- Common -->
     <string name="ok">OK</string>
