--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,12 +101,12 @@
     <string name="hint_manager_surname">Surname</string>
     <string name="hint_manager_email">Contact email</string>
     <string name="hint_manager_description">Description</string>
-    <string name="hint_manager_building">Operation building</string>
+    <string name="hint_manager_building">Coworking</string>
     <string name="error_manager_empty_name">Please enter a manager name</string>
     <string name="error_manager_empty_surname">Please enter a manager surname</string>
     <string name="error_manager_empty_email">Please enter a manager email</string>
     <string name="error_manager_email_invalid">Please enter a valid email</string>
-    <string name="error_manager_empty_building">Please select an operation building</string>
+    <string name="error_manager_empty_building">Please select an operation coworking</string>
 
     <!-- Residents -->
     <string name="title_residents">Residents</string>
